ecoledger_-validation-retirement-on-blockchain/kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecoledger-frontend
  labels:
    app: ecoledger-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ecoledger-frontend
  template:
    metadata:
      labels:
        app: ecoledger-frontend
    spec:
      containers:
      - name: frontend
        image: laiba777/ecoledger-frontend:v14-48
        imagePullPolicy: Always 
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
