ecoledger_-validation-retirement-on-blockchain/kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ecoledger-frontend-service
spec:
  selector:
    app: ecoledger-frontend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
